# nanomoni

./: .dockerignore  .gitignore  Dockerfile  README.md  alloy.config  docker-compose.yml  entrypoint.sh  prometheus.yml  pyproject.toml  run_benchmark.sh
clients/: README.md  demo_client.py
dockerfiles/: Dockerfile.client  Dockerfile.issuer  Dockerfile.vendor
envs/: client-env.example.sh  env.example.sh  example.client.sh  example.issuer.sh  example.vendor.sh  issuer-env.example.sh  vendor-env.example.sh
grafana/dashboards/: overview.json
scripts/: client-entrypint.sh  client-entrypoint.sh  issuer-entrypoint.sh  lint.sh  test.sh  vendor-entrypoint.sh
src/anal/: main.py
src/nanomoni/: client_main.py  client_pay_chan.py  env.py  issuer_main.py  main.py
src/nanomoni/api/: __init__.py  app.py  (+1 more)
tests/: conftest.py  test_task_repository.py  test_task_service.py  test_task_validation.py  test_tasks_router.py  test_user_service.py  test_user_validation.py  test_users_router.py
tests/bug/: BUG_REPORT.md  __init__.py  conftest.py  test_first_payment_index_bugs.py
tests/e2e/: __init__.py  conftest.py
tests/fixtures/: __init__.py  in_memory_repositories.py  in_memory_storage.py  test_issuer_client.py
tests/integration/: adaptive_delay_controller.py  test_lost_update.py  test_lost_update_on_first_payment.py  test_paytree_lost_update_on_first_payment.py  test_payword_lost_update_on_first_payment.py  test_vulnerable_first_payment.py  test_vulnerable_subsequent_payment.py  vulnerable_repository.py
tests/stress/: __init__.py  conftest.py  test_stress_open_and_close_channel.py  test_stress_open_and_close_paytree_channel.py  test_stress_open_and_close_payword_channel.py  test_stress_parallel_channel_lifecycle.py  test_stress_parallel_payment_streaming.py  test_stress_parallel_paytree_payment_streaming.py  test_stress_parallel_payword_payment_streaming.py  test_stress_payment_streaming.py  test_stress_paytree_payment_streaming.py  test_stress_payword_payment_streaming.py
tests/unit/: __init__.py
tests/use_cases/: __init__.py  conftest.py  test_payment_service.py
umls/: .gitignore  README.MD  client.puml  core.puml  issuer.puml  phase1a-registration.puml  phase1b-channel-opening.puml  phase2-payments.puml  phase2a-first-payment.puml  phase2b-subsequent-payments.puml  phase3-closure-initiation.puml  phase3a-closure-initiation.puml  phase3b-issuer-settlement.puml  system-overview.puml  vendor.puml
(+159 files in other folders)
