[project]
name = "nanomoni"
version = "0.1.0"
description = "Cool project"
authors = [
    {name = "otaviootavio",email = "otaviovacari@usp.br"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "ruff (>=0.12.11,<0.13.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "nanomoni", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
