[project]
name = "nanomoni"
version = "0.1.0"
description = "Cool project"
authors = [
    {name = "otaviootavio",email = "otaviovacari@usp.br"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "ruff (>=0.12.11,<0.13.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "httptools (>=0.6.0,<0.7.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "cryptography (>=42.0.0,<44.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "pytest-asyncio (<1.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "nanomoni", from = "src"}]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
explicit_package_bases = true
files = ["src/nanomoni"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end (requires docker compose)",
    "stress: marks tests as stress tests (requires docker compose)",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
